--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -1520,7 +1520,28 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>나는 유기견을 입양 하기 위해 작성하는 설문에 입력되는 내용은 전부 사실인것을 동의한다.</p>
+
+          <div class="form-check">
+            <input class="agree_check form-check-input" type="checkbox" value="" id="agree_check_1">
+            <label class="form-check-label" for="agree_check_1">
+              <p>나는 해당 유기견의 현재 건강 상태를 인지 하였습니다.</p>
+            </label>
+          </div>
+          
+          <div class="form-check">
+            <input class="agree_check form-check-input" type="checkbox" value="" id="agree_check_2">
+            <label class="form-check-label" for="agree_check_2">
+              <p>나는 해당 유기견의 건강에 변화가 있음에 따라 추가 비용이 발생 할 수도 있음을 인지 하였습니다.</p>
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="agree_check form-check-input" type="checkbox" value="" id="agree_check_3">
+            <label class="form-check-label" for="agree_check_3">
+              <p>나는 해당 유기견의 입양 설문지의 정보에 거짓이 없음을 동의한다.</p>
+            </label>
+          </div>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">나가기</button>
