--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -464,3 +464,7 @@ select.filter-breed {
   align-items: center;
   justify-content: center;
 }
+.agree_check:checked {
+  background-color: #19B394;
+  border-color: #19B394;
+}
