--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
   <!-------------------- MAIN CSS -------------------->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-  
+
   <!-------------------- JS IMPORTS -------------------->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
@@ -81,14 +81,14 @@
   </header>
 
   <!-------------------- HOME SECTION -------------------->
-  <section class="container-fluid min-vh-100 px-0 align-items-center bg-image" id="home-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-1.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0 align-items-center bg-image" id="home-section" style="background-image: url({{ url_for('static', filename='img/home_1.jpg') }})">
     <div class="overlay-home-section min-vh-100">
       <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
 
         <div class="row justify-content-center">
           <div class="col text-center">
-            <h1>유기견 매칭 AI추천 시스템</h1>
-            <h2>당신의 반려견을 찾아드려요</h2>
+            <h1 class="fw-bold">Saving dog ; 유기견 매칭 AI 추천 시스템</h1><br>
+            <h2 class="fw-bold"> 견디지마, 내가 지켜줄게</h2>
           </div>
         </div>
 
@@ -144,7 +144,7 @@
           </div>
         </div>
 
-        <!-- 임시 -->
+        <!-- 보호중인 강아지 -->
         <div class="col-6 col-lg-3 d-flex align-items-stretch justify-content-center" data-aos="zoom-in" data-aos-delay="400">
           <div class="card-stat card text-center" style="width: 14rem;">
             <div class="card-body stat-card-body">
@@ -171,13 +171,14 @@
         <div class="row justify-content-center">
 
           <div class="col-12 text-center">
-            <h1>현재 보호중인 유기견들을 찾아봐요</h1>
+            <h1 class="fw-bold">현재 보호중인 유기견들을 찾아봐요</h1>
             <h2></h2>
           </div>
 
           <div class="col-12 text-center">
-            <button type="button" id="abandoned-dog-page-btn" class="btn btn-primary" onclick="moveToAbandonedDogPage()">현재
-              보호중인 유기견 찾기!</button>
+            <button type="button" id="abandoned-dog-page-btn" class="btn btn-primary" onclick="moveToAbandonedDogPage()">
+              <p class="m-0">현재 보호중인 유기견 찾기!</p>
+            </button>
           </div>
 
         </div>
@@ -191,11 +192,12 @@
     <div class="overlay-survey-section min-vh-100">
       <div class="container" data-aos="fade-right" data-aos-delay="200">
 
-        <h1 class="text-center">나에게 맞는 AI 기반 유기견 추천!</h1>
+        <h1 class="text-center fw-bold">나에게 맞는 AI 기반 유기견 추천!</h1>
 
         <div class="d-flex justify-content-center">
-          <button type="button" id="survey-page-btn" class="btn btn-primary" onclick="moveToSurveyPage()">유기견 추천
-            받기!</button>
+          <button type="button" id="survey-page-btn" class="btn btn-primary" onclick="moveToSurveyPage()">
+            <p class="m-0">유기견 추천 받기!</p>
+          </button>
         </div>
 
       </div>
