--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -224,8 +224,8 @@ select.filter-breed {
 
 .dog-post-img {
   /* height: 41.5vh; */
-  height: calc((100vh - 144px)/2);
-  max-width: 100vw;
+  /* height: calc((100vh - 144px)/2); */
+  max-width: 100%;
   object-fit: contain;
 
   border: #19B394 2px solid;
@@ -241,7 +241,11 @@ select.filter-breed {
 
 .basic-info-container,
 .detail-info-container {
-  min-height: calc((100vh - 144px)/2);
+  /* min-height: calc((100vh - 144px)/2); */
+}
+
+.basic_info_box {
+  height: 5rem;
 }
 
 .basic-info-item-1 {
@@ -268,15 +272,21 @@ select.filter-breed {
   color: black;
   border: #19B394 2px solid;
   border-radius: 2rem;
+
+  height: 8rem;
 }
 
 /**
  * Panel Trait (stat)
  */
+/* .panel-trait>div {
+  height: 8rem;
+} */
 
-.panel-trait {
-  /* height: calc((100vh - 144px)/12); */
-  height: calc((100vh - 144px)/8);
+.check_btn,
+.exclamation_btn,
+.x_btn {
+  height: 3rem;
 }
 
 .trait_A,
@@ -303,6 +313,8 @@ select.filter-breed {
   /* color: black; */
   border: #19B394 2px solid;
   border-radius: 1rem;
+
+  height: 4rem;
 }
 
 .check_btn {
@@ -395,6 +407,8 @@ select.filter-breed {
   /* color: black; */
   border: #19B394 2px solid;
   border-radius: 1rem;
+
+  height: 3rem;
 }
 
 .progress-bar {
