--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -74,12 +74,12 @@
 
         <div class="survey-result-carousel row h-100 justify-content-center m-0">
           <div class="col-12 h-100">
-            <div class="row h-100 pt-4 pb-4">
+            <div class="row h-100 pt-4">
 
               <div class="col-12 h-100">
 
                 <div class="row h-100">
-                  <div class="survey-result-title col-12 align-items-center justify-content-center d-flex pb-4">
+                  <div class="survey-result-title col-12 align-items-center justify-content-center d-flex">
                     <div class="survey-result-title-border row h-100 pt-3 align-items-center justify-content-center d-flex">
                       <div class="col-12 text-center h-50 align-items-center justify-content-center d-flex" style="font-family: 'NanumSquareRoundExtraBold';">
                         <h3 class="fw-bold" style="color: #19B394;">유기견 매칭 AI추천 결과</h3>
@@ -171,7 +171,7 @@
 
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
-                                <div class="dog-img-container justify-content-center align-items-center d-flex">
+                                <div class="dog-img-container h-100 justify-content-center align-items-center d-flex">
                                   <img src="{{ ranking_order[1]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[1]['desertionNo'] }}" score_diff="{{ ranking_order[1]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
@@ -242,7 +242,7 @@
 
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
-                                <div class="dog-img-container justify-content-center align-items-center d-flex">
+                                <div class="dog-img-container h-100 justify-content-center align-items-center d-flex">
                                   <img src="{{ ranking_order[2]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[2]['desertionNo'] }}" score_diff="{{ ranking_order[2]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
@@ -313,7 +313,7 @@
 
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
-                                <div class="dog-img-container justify-content-center align-items-center d-flex">
+                                <div class="dog-img-container h-100 justify-content-center align-items-center d-flex">
                                   <img src="{{ ranking_order[3]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[3]['desertionNo'] }}" score_diff="{{ ranking_order[3]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
@@ -384,7 +384,7 @@
 
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
-                                <div class="dog-img-container justify-content-center align-items-center d-flex">
+                                <div class="dog-img-container h-100 justify-content-center align-items-center d-flex">
                                   <img src="{{ ranking_order[4]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[4]['desertionNo'] }}" score_diff="{{ ranking_order[4]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
