--- a/static/css/survey_result.css
+++ b/static/css/survey_result.css
@@ -183,9 +183,9 @@ body {
 }
 
 .carousel-dog-img {
-  max-height: 100%;
+  height: 100%;
   max-width: 100%;
-  object-fit: contain;
+  /* object-fit: contain; */
 
   transform: scale(1);
   opacity: 0.9;
