--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -409,7 +409,8 @@ select.filter-breed {
   border: #19B394 2px solid;
   border-radius: 1rem;
 
-  height: 3rem;
+  min-height: 3rem;
+  /* height: 3rem; */
 }
 
 .progress-bar {
@@ -422,6 +423,15 @@ select.filter-breed {
   white-space: nowrap; */
   background-color: #19B394;
   /* transition: var(--bs-progress-bar-transition); */
+}
+.bar_green {
+  background-color: #339900;
+}
+.bar_yellow {
+  background-color: #FFCC00;
+}
+.bar_red {
+  background-color: #CC3300;
 }
 
 /**
